# dj

./: .gitmessage.txt  README.md  ledger_router.py  pyproject.toml  requirements.txt
Desktop/Django/: .gitignore  db.sqlite3  pyproject.toml  setup.cfg 
Desktop/Django/.github/workflows/: checks.yml
Desktop/Django/apps/analysis/: models.py
Desktop/Django/apps/analysis/migrations/: 0001_initial.py
Desktop/Django/apps/notifications/: models.py
Desktop/Django/apps/notifications/migrations/: 0001_initial.py
Desktop/Django/apps/users/: serializers.py  urls.py  views.py
Desktop/Django/apps/users/migrations/: 0001_initial.py
Desktop/Django/config/settings/: base.py  dev.py  prod.py
Downloads/django_mini_project/config/settings/: base.py
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py
apps/analysis/: admin.py
apps/transactions/: admin.py  models.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/users/: models.py
config/: urls.py
